llvm/test/tools/llubi/infinite_loop_error_only.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --max-steps 10 < %s 2>&1 | FileCheck %s

define void @main() {
entry:
  br label %loop

loop:
  br label %loop
}
; CHECK: Stacktrace:
; CHECK-NEXT: #0   br label %loop at @main <stdin>:9
; CHECK-NEXT: Error: Exceeded maximum number of execution steps.
; CHECK-NEXT: error: Execution of function 'main' failed.
